kaptaind: Minor -> v1.24.0 [api-added; paths=24; api_touches=158; deps=78; runtime=0; score=0.778; cluster=8320d882-4322-401b-9380-30b99de18de5]
